- fixed possible crash on no longer supported savestates:
  - we try to keep old savestates working. Nevertheless occasionally we do
    remove stuff. Loading an old savestate contains such stuff used to crash,
    now we give a clean error message.
- fixes for load_settings command

Build system, packaging, documentation:
- added support for loongarch
- on macOS, at least XCode 15.3 is required
- Android build is totally broken, and will require a lot of effort and help to
  get back up, which is not planned by us.
- 3rd party updates of SDL (2.30.1), SDL2_ttf (2.22.0), GLEW (2.2.0)
- added patch to add aarch64 support to libtheora 3rdparty build
- fixed link error in libvorbis for XCode 15 on macOS
- avoid pkg-config build error with Clang 15 on macOS


And of course the usual various bug fixes and performance improvements.

In "doc/manual/index.html" you can find a set of HTML manuals for openMSX.
Make sure you read this if you haven't used openMSX before, but also to learn
more about the new and changed features.

CPU and graphics performance varies a lot, depending on the openMSX settings
and the MSX hardware and software you're emulating. Some things run fine on a
200 MHz machine, others are slow on a 2 GHz machine. For performance tuning
tips, see the Setup Guide.

openMSX is confirmed to run on the following operating systems: Linux, Windows,
macOS, FreeBSD, OpenBSD and NetBSD; on x86, x86-64, PPC, ARM, MIPS and Sparc
CPU's. Running on other operating systems (wherever SDL runs) or CPU's should
be possible, but may require some modifications to the build system. If you are
compiling on a new platform, please share your experiences (see below for
contact info), so we can make openMSX more portable.

openMSX Home Page:
  https://openmsx.org/
Project page on GitHub:
  https://github.com/openMSX
Contact options:
- Talk to us on #openmsx on libera.chat.
- Use the forum on https://www.msx.org/forum/semi-msx-talk/openmsx