@@ -143,7 +143,7 @@ If you have compiled packages from source before, you probably have some of thes
 <dd>A compact and dynamic programming language. The latest version should work fine. Note: on Windows 7 you may have to add the path to Python (e.g. <code>C:\Python</code>) to your <code>PATH</code> manually.</dd>
 <dt>C++ compiler</dt>
 <dd>There are three compilers that are supported to build openMSX: GCC, clang
-and Visual C++. The GCC compiler builds openMSX on all supported platforms, clang is the default on macOS, while Visual C++ is the primary compiler for Windows.</dd>
+and Visual C++. The GCC compiler builds openMSX on all supported platforms, clang (XCode) is the default on macOS, while Visual C++ is the primary compiler for Windows.</dd>
 
 </dl>
 
@@ -160,7 +160,7 @@ Version 3.79 or higher should suffice, but 3.80 or higher is recommended and eve
 
 <dt>g++</dt>
 <dd>The GNU C++ compiler.
-At least version 10 is required to build openMSX. Version 11 or higher is recommended.
+At least version 11 is required to build openMSX.
 </dd>
 
 </dl>
@@ -188,7 +188,7 @@ Install Xcode from Apple, which you can find in the Mac App Store. The openMSX b
 
 <h4>Visual C++</h4>
 
-<p>To build with Visual C++ you need to have the latest version of it installed. Currently, this is 2019.</p>
+<p>To build with Visual C++ you need to have the latest version of it installed. Currently, this is 2022.</p>
 
 <p>Use this way to obtain the Visual C++ compiler:</p>
 <dl>
